--- a/css/general.css
+++ b/css/general.css
@@ -7,6 +7,16 @@
 .blue{
     color: rgb(13, 154, 255);
 }
+.orange{
+    color: rgb(252, 160, 242);
+}
+
+h3{
+    line-height: 2rem;
+}
+li{
+    line-height: 2rem;
+}
 a{
     color: rgb(13, 154, 255);
     text-decoration: none;
@@ -14,18 +24,37 @@ a{
 a:hover{
     text-decoration: underline;
 }
+button{
+   padding-left: 1rem;
+   padding-right: 1rem; 
+}
+
 .text{
     text-indent: 2rem;
     font-weight: lighter;
     text-align: justify;
 }
 .border{
-    border: 1px solid black;
+    padding: 1rem;
+    box-shadow: 0 2px 5px rgb(95, 130, 130);
     background-color: rgb(240, 254, 254);
 }
 .text-border{
+    padding: 1rem;
     background-color: rgb(247, 244, 244);
     box-shadow: 0 2px 8px rgb(0, 0, 0,0.2);
+}
+.text-shadow-white{
+    color: rgb(255, 255, 255);
+    text-shadow:0 0 3px rgba(0, 0, 0);
+}
+.text-shadow-pink{
+    color: white;
+    text-shadow: 0 0 3px rgb(254, 14, 178);
+}
+.text-shadow-blue{
+    color:white;
+    text-shadow: 0 0 3px rgb(0, 174, 255);
 }
 .img-pos{
     display: inline-block;
@@ -37,4 +66,7 @@ a:hover{
     font-weight: bolder;
     left: 50%;
     transform: translate(-50%,0);
+}
+.space{
+    min-width: 20px;
 }
