--- a/css/general.css
+++ b/css/general.css
@@ -56,6 +56,14 @@ a:hover{
     color:white;
     text-shadow: 0 0 3px rgb(0, 174, 255);
 }
+.text-shadow-red{
+    color: white;
+    text-shadow: 0 0 3px red;
+}
+.text-shadow-purple{
+    color: white;
+    text-shadow: 0 0 3px rgb(128, 95, 248);
+}
 .img-pos{
     display: inline-block;
     position: relative;
