--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body{
     box-shadow: 0px 2px 8px rgb(0,0,0,0.2);
 }
 #nav > button{
+    font-size: small;
     height: 3rem;
     width: 10rem;
     background:none;
@@ -26,6 +27,7 @@ body{
     flex-direction: row;
 }
 #left{
+    font-size: small;
     display: flex;
     flex-direction: column;
 }
@@ -42,6 +44,7 @@ body{
     color: rgb(104, 167, 255);
 }
 #context{
+    margin: 0 auto;
     flex-grow:10;
     max-width: 1200px;
 }
